--- a/src/main/resources/templates/product/productlist.html
+++ b/src/main/resources/templates/product/productlist.html
@@ -28,8 +28,8 @@
         </form>
       </tr>
     </table>
-  
-    <table  th:if="!${#lists.isEmpty(products)}" border="1" style="margin: 0 auto;">
+
+    <table  th:if="${products.getContent().size()>0}" border="1" style="margin: 0 auto;">
       <tr>
         <th>商品画像</th>
         <th>商品名</th>
@@ -59,6 +59,8 @@
         </td>         
       </tr>
     </table>
+
+    <p th:if="${products.getContent().size()==0}" style="text-align:center;">該当する商品情報がありません</p>
 
     <ul class="pagination">
       <!-- 最初のページの場合はリンクを非活性化にし2ページ目以降はリンクを有効にする -->
