--- a/src/main/resources/templates/product/register/confirm.html
+++ b/src/main/resources/templates/product/register/confirm.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>新商品登録（確認）</title>
+    <title>新商品登録（確認）画面</title>
     <link rel="stylesheet" th:href="@{/css/styles.css}">
 </head>
 <body>
@@ -29,14 +29,14 @@
             </tr>
             <tr>
                 <td style="text-align:center;">画像</td>
-                <td style="text-align:left;"><img th:src="${image}" width="500"></td>
+                <td style="text-align:left;"><img th:src="${image}" width="100"></td>
             </tr>
         </table>
         <input type="hidden" th:name="${_csrf.parameterName}" th:value="${_csrf.token}"/>
         <form th:action="@{execute}" method="post">
-            <a href="/menu">キャンセル</a>
+            <a href="/productlist">キャンセル</a>
             <a href="/registerproduct/input">戻る
-            <input type="submit" value="確認">
+            <input type="submit" value="完了">
         </form>
     </div>
     <div th:replace="fragment::footer"></div>
