--- a/src/main/resources/templates/product/register/input.html
+++ b/src/main/resources/templates/product/register/input.html
@@ -13,6 +13,9 @@
         <h1>新商品登録（入力）</h1>
         
         <form th:action="@{/registerproduct/confirm}" method="post" th:object="${productForm}" enctype="multipart/form-data">
+            <div class="error">
+                <p th:each="error : ${#fields.errors('global')}" th:text="${error}"></p>
+            </div>
             <table style="margin: 0 auto;">
                 
                 <tr>
@@ -60,12 +63,7 @@
             <input type="hidden" th:name="${_csrf.parameterName}" th:value="${_csrf.token}"/>
             <a href="/menu">キャンセル</a>
             <input type="submit" value="確認">
-            <div class="error">
-                <ul th:if="${#fields.hasErrors('global')}">
-                    <li th:each="error : ${#fields.errors('global')}" th:text="${error}">
-                    </li>
-                </ul>
-            </div>
+            
         </form>
         
     </div>
