--- a/src/main/resources/templates/product/register/input.html
+++ b/src/main/resources/templates/product/register/input.html
@@ -62,7 +62,7 @@
             
             <input type="hidden" th:name="${_csrf.parameterName}" th:value="${_csrf.token}"/>
             <a href="/menu">キャンセル</a>
-            <input type="submit" value="確認">
+            <input type="submit" value="完了">
             
         </form>
         
