--- a/src/main/resources/templates/account/register/input.html
+++ b/src/main/resources/templates/account/register/input.html
@@ -46,7 +46,7 @@
             </table>
             <input type="hidden" th:name="${_csrf.parameterName}" th:value="${_csrf.token}"/>
             <a href="/menu">キャンセル</a>
-            <input type="submit" value="確認">
+            <input type="submit" value="完了">
             
         </form>
     </div>
