--- a/src/main/resources/templates/product/categoryregister/input.html
+++ b/src/main/resources/templates/product/categoryregister/input.html
@@ -28,7 +28,7 @@
             </table>
             <input type="hidden" th:name="${_csrf.parameterName}" th:value="${_csrf.token}"/>
             <a href="/menu">キャンセル</a>
-            <input type="submit" value="完了">
+            <input type="submit" value="確認">
         </form>
         <div th:if="${errorMessage}" th:text="${errorMessage}" style="color:red;"></div>
 
