--- a/src/main/resources/templates/product/categoryregister/confirm.html
+++ b/src/main/resources/templates/product/categoryregister/confirm.html
@@ -20,7 +20,7 @@
         <form th:action="@{execute}" method="post">
             <a href="/menu">キャンセル</a>
             <a href="/registerproductcategory/input">戻る
-            <input type="submit" value="登録">
+            <input type="submit" value="完了">
         </form>
     </div>
     <div th:replace="fragment::footer"></div>
