--- a/src/main/resources/templates/product/register/input.html
+++ b/src/main/resources/templates/product/register/input.html
@@ -4,7 +4,6 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>新商品登録（入力）画面</title>
-
     <link rel="stylesheet" th:href="@{/css/styles.css}">
 </head>
 <body>
@@ -62,7 +61,7 @@
             
             <input type="hidden" th:name="${_csrf.parameterName}" th:value="${_csrf.token}"/>
             <a href="/menu">キャンセル</a>
-            <input type="submit" value="完了">
+            <input type="submit" value="確認">
             
         </form>
         
