--- a/src/main/resources/templates/product/update/input.html
+++ b/src/main/resources/templates/product/update/input.html
@@ -61,7 +61,7 @@
                 </tr>
                 <tr>
                     <td style="text-align:center;">画像</td>
-                    <td><img th:src="@{/img/__*{imageUrl}__}"></td>
+                    <td><img th:src="@{/img/__*{imageUrl}__}"  class="image-size"></td>
                 </tr>
             </table>
             <input type="hidden" th:name="${_csrf.parameterName}" th:value="${_csrf.token}"/>
