--- a/src/main/resources/templates/product/update/input.html
+++ b/src/main/resources/templates/product/update/input.html
@@ -64,6 +64,7 @@
                     <td><img th:src="@{/img/__*{imageUrl}__}"></td>
                 </tr>
             </table>
+            <input type="hidden" th:value="*{productId}"/>
             <input type="hidden" th:name="${_csrf.parameterName}" th:value="${_csrf.token}"/>
             <a href="/menu">キャンセル</a>
             <input type="submit" value="確認">
