--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -13,6 +13,7 @@
     <div>
         <h1>ログイン</h1>
         <form th:action="@{/auth_employee}" method="post">
+            <p th:if="${session['SPRING_SECURITY_LAST_EXCEPTION']} != null" th:text="${session['SPRING_SECURITY_LAST_EXCEPTION'].message}" class="error"></p>
             <table  style="margin: 0 auto;">
                 <tr>
                     <td style="text-align:right;">アカウント名</td>
