--- a/src/main/resources/templates/product/update/confirm.html
+++ b/src/main/resources/templates/product/update/confirm.html
@@ -32,7 +32,7 @@
                 <tr>
                     <td style="text-align:center;">画像</td>
                     <td th:if="${image!=null}">
-                        <img th:src="${image}" >
+                        <img th:src="${image}" class="image-size">
                     </td>
                     <td th:if="${image==null}">
                         <img th:src="@{/img/__${productForm.imageUrl}__}" class="image-size">
