--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -12,9 +12,11 @@
 
     <div>
         <h1>ログイン</h1>
+        <div th:if="${session['SPRING_SECURITY_LAST_EXCEPTION'] != null}" class="error">
+            <span th:text="${session['SPRING_SECURITY_LAST_EXCEPTION'].message}"></span>
+        </div>
         <form th:action="@{/auth_employee}" method="post">
-            <p th:if="${session['SPRING_SECURITY_LAST_EXCEPTION']} != null" th:text="${session['SPRING_SECURITY_LAST_EXCEPTION'].message}" class="error"></p>
-            <table  style="margin: 0 auto;">
+             <table  style="margin: 0 auto;">
                 <tr>
                     <td style="text-align:right;">アカウント名</td>
                     <td style="text-align:left;"><input type="text" name="username"></td>
