--- a/src/main/resources/templates/account/register/input.html
+++ b/src/main/resources/templates/account/register/input.html
@@ -35,7 +35,7 @@
                 </tr>
                 <tr>
                     <td style="text-align:center;">パスワード</td>
-                    <td style="text-align:left;"><input type="text" th:field="*{empAccountPassword}"></td>
+                    <td style="text-align:left;"><input type="password" th:field="*{empAccountPassword}"></td>
                 </tr>
                 <tr>
                     <td colspan="2">
